# EMPIRE-Testing

./: CMakeLists.txt
benchmark/: robotInEmpire.txt
benchmark/FieldExamples/matlabExample/: emperorInput.xml  matlabClient.m  matlabClient.xml
benchmark/FieldExamples/turekFSI3Coarse/: emperorInput.xml  run.sh  runParallelOF.sh
benchmark/FieldExamples/turekFSI3Coarse/turekFSIBenchmarkOF/0/: U  p  pointDisplacement
benchmark/FieldExamples/turekFSI3Coarse/turekFSIBenchmarkOF/1/: U  cellDisplacement  meshPhi  p  phi  pointDisplacement  rAU
benchmark/FieldExamples/turekFSI3Coarse/turekFSIBenchmarkOF/1/polyMesh/: points
benchmark/FieldExamples/turekFSI3Coarse/turekFSIBenchmarkOF/1/uniform/: time
benchmark/FieldExamples/turekFSI3Coarse/turekFSIBenchmarkOF/constant/: EmpireDict  dynamicMeshDict  transportProperties
benchmark/FieldExamples/turekFSI3Coarse/turekFSIBenchmarkOF/constant/polyMesh/: blockMeshDict
benchmark/FieldExamples/turekFSI3Coarse/turekFSIBenchmarkOF/system/: controlDict  decomposeParDict  fvSchemes  fvSolution
benchmark/SignalExamples/: robotInEmpire.txt
benchmark/SignalExamples/LinearTwoSpringDynamicIterativeAitken/: emperorInput.xml  run.sh
benchmark/SignalExamples/LinearTwoSpringDynamicIterativeAitken/refSolution/: interfaceJacobian.m  springSolver.m  springSolverInputForce.m  stabilityTestSystem.m
benchmark/SignalExamples/LinearTwoSpringDynamicIterativeConstRelax/: emperorInput.xml  run_man.sh
benchmark/SignalExamples/LinearTwoSpringDynamicIterativeConstRelax/refSolution/: interfaceJacobian.m  springSolverInputDisplacement.m  stabilityTestSystem.m
benchmark/SignalExamples/LinearTwoSpringDynamicIterativeConstRelax/subSystem1/: subSystem1.py
benchmark/SignalExamples/LinearTwoSpringDynamicIterativeIJCSA/: emperorInput.xml  run_man.sh
benchmark/SignalExamples/LinearTwoSpringDynamicIterativeIJCSA/refSolution/: interfaceJacobian.m  stabilityTestSystem.m
benchmark/SignalExamples/LinearTwoSpringDynamicIterativeIJCSA/subSystem1/: subSystem1.py
benchmark/SignalExamples/LinearTwoSpringDynamicIterativeIJCSA/subSystem2/: subSystem2.py
benchmark/SignalExamples/PingPongPython/: emperorInput.xml  ping.py  ping.xml  pong.py  pong.xml  run.sh  run_man.sh
benchmark/SignalExamples/PingPongPythonC/: emperorInput.xml  ping.xml  pong.py  pong.xml  run.sh
benchmark/SignalExamples/PingPongPythonC/ping/: Makefile  include_GCC.mk  include_ICC.mk
benchmark/SignalExamples/PingPongPythonC/ping/src/: ping.c
benchmark/SignalExamples/ThreeCodePingPongPython/: controlUnit.py  controlUnit.xml  dummyOF.py  emperorInput.xml  generatorUnit.py  generatorUnit.xml  run_man.sh
benchmark/SignalExamples/ThreeCodeTurbineIJCSA/: controlUnit.py  dummyOF.py  dummyOF.xml  emperorInputIJCSA.xml  generatorUnit.py  pseudocode.txt  run_man.sh
benchmark/robotLibraries/: compare.py  ownLib.py
clients/: CMakeLists.txt
clients/client_c/: empireClient_c.xml
clients/client_c/src/: CMakeLists.txt  client_c.c
clients/client_cpp/: empireClient_cpp.xml
clients/client_cpp/src/: CMakeLists.txt  client_cpp.cpp
clients/client_f90/: Makefile  include_depend.mk
clients/client_f90/src/: CMakeLists.txt  client_f90.f90  m_empire_api.f90
clients/dummyCFD/src/: CMakeLists.txt  LoadCurveParser.h  dummyCFD.cpp
clients/dummyCSM/src/: CMakeLists.txt  dummyCSM.cpp
clients/mechanicalClient/: CMakeLists.txt
clients/mechanicalClient/src/: CMakeLists.txt  mechanicalClient.cpp
clients/meshClientA/src/: CMakeLists.txt  meshClientA.cpp
clients/meshClientB/src/: CMakeLists.txt  meshClientB.cpp
clients/meshClientTurbomachinery/src/: CMakeLists.txt  meshClientTurbomachinery.cpp
clients/mmsClient/src/: CMakeLists.txt  MMS_membrane_wolfram3.mw  mmsClient.cpp
clients/mmsFsiClient/src/: CMakeLists.txt  mmsFsiClient.cpp
clients/optimizationClient/: CMakeLists.txt
clients/optimizationClient/doc/graph/: Constraint.dia  DesignVariable.dia  Flow.dia  Mesh.dia  Objective.dia  Optimizer.dia  Optimizer_dependencies.dia  ProblemManager.dia  Sensitivity.dia
clients/optimizationClient/doc/misc/: xml_for_carat.xml  xml_for_of.xml  xml_for_optclient.xml
clients/optimizationClient/src/: CMakeLists.txt  Constraint.cpp  Constraint.h  DesignVariableInterface.cpp  DesignVariableInterface.h  DesignVariableMesh.cpp  DesignVariableMesh.h  Mesh.cpp  Mesh.h  MeshIGA.cpp  MeshIGA.h  MeshInterface.cpp  MeshInterface.h  Objective.cpp  Objective.h  ObjectiveInterface.h  Optimizer.cpp  Optimizer.h  OptimizerNLOpt.cpp  OptimizerNLOpt.h  ParserInterface.cpp  ParserInterface.h  ProblemData.cpp  ProblemData.h  ProblemManager.cpp  ProblemManager.h  RhinoFileIO.cpp  RhinoFileIO.h  Sensitivity.cpp  Sensitivity.h  helper.cpp  helper.h  optimizationClient.cpp
clients/recorderClient/src/: CMakeLists.txt  recorderClient.cpp
