#------------------------------------------------------------------------------------#
ExternalProject_Get_Property(nlopt INSTALL_DIR)
LINK_DIRECTORIES("${INSTALL_DIR}/libnlopt.a")
#------------------------------------------------------------------------------------#
add_subdirectory(src)
#------------------------------------------------------------------------------------#